--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,16 +2,21 @@ name: Daily Commit Automation
 
 on:
   schedule:
-    # Runs every day at 09:15 UTC (example — choose a fixed time)
+    # Runs every day at 09:15 UTC (you can adjust this time)
     - cron: '15 9 * * *'
-  workflow_dispatch:  # allows manual trigger for testing
+  workflow_dispatch:
 
 jobs:
   auto-commit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # ✅ Allow commits & pushes
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update log file (by 24f2005903@ds.study.iitm.ac.in)
         run: |
@@ -19,8 +24,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "24f2005903@ds.study.iitm.ac.in"
+          git config user.name "github-actions[bot]"
+          git config user.email "24f2005903@ds.study.iitm.ac.in"
           git add daily-log.txt
           git commit -m "Automated daily commit: $(date -u)" || echo "No changes to commit"
-          git push
+          git push origin HEAD:${GITHUB_REF##*/}
